test_suite/tests/errors/rule_missing_body.rs
use banish::banish;

fn main() {
    banish! {
        @foo
            step ? x > 0
    }
}